[package]
name = "solana-mev-arbitrage"
version = "0.1.0"
edition = "2021" # Use stable edition

[dependencies]
# Core Solana
solana-client = "2.0.9"
solana-sdk = "2.0.9"
solana-account-decoder = "2.0.9"
spl-token = "6.0.0"

# Anchor
anchor-client = "0.32.1"

# Orca Low-Level SDK
orca_whirlpools_client = "5.0.1"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Graph
petgraph = "0.8.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Rate limiting - CRITICAL VERSION FIX
governor = "0.10.4"

# Logging - FIXED FEATURES
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
async-trait = "0.1"