[package]
name = "solana-mev-arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Solana
solana-client = "2.0.9"
solana-sdk = "2.0.9"
solana-account-decoder = "2.0.9"
solana-program = "2.0.9" # Added for dex module
spl-token = "6.0.0"

# Anchor
anchor-client = "0.32.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5.0" # Added for Vertigo deserialization
anyhow = "1.0" # Added for error handling in dex module

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Graph
petgraph = "0.8.3"

# HTTP client (keep for price oracles if needed)
reqwest = { version = "0.12", features = ["json"] }

# Rate limiting
governor = "0.10.4"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
async-trait = "0.1"