[package]
name = "solana-onchain-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "A simple Solana onchain arbitrage bot"
repository = "https://github.com/cetipo/solana-onchain-arbitrage-bot"
license = "MIT"

[lib]
name = "solana_onchain_arbitrage_bot"
path = "src/lib.rs"

[dependencies]
dashmap = "5.5"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full", "fs"] }

# Core Solana dependencies (keep all - essential)
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"

# SPL token support
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = ["no-entrypoint"] }

# Serialization only for config
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Utilities
anyhow = "1.0"
rand = "0.8"
bs58 = "0.4"
borsh = "0.10.3"

# CLI and logging
clap = "3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Meteora CPI (keep if using Meteora DEX)
meteora-damm-cpi = { path = "lib/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "lib/meteora-vault", features = ["no-entrypoint"] }